--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:K90erFUhCTNxTDn7TrO2EuhRSsybd4Y/ao0sGfGVmgo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 APP_LOCALE=en
